создал кнопки переключатели и вставил картинку

--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
     <head>
         <title>Flower Challenge</title>
+        <link rel="stylesheet" href="style/main.css">
     </head>
     <body>
-    <!-- <div></div>  -->
+        <div class="container">
+            <div class="title">Задание Цветок</div>
+            <div class="buttons">
+                <div class="circle-button red"></div>
+                <div class="circle-button green"></div>
+                <div class="circle-button blue"></div>
+                <div class="circle-button yellow"></div>
+            </div> 
+        </div>
+        <div class="container">
+            <img src="./style/img/25563959_7103520.svg" alt="" width="400px" height="600px" class="img-flower">
+        </div>
     </body>
 </html>
