Подключение SASS, Vite, переход с css на sass

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Flower Challenge</title>
-        <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" href="preprocessor/main.sass">
     </head>
     <body>
         <div class="container">
@@ -15,7 +16,7 @@
             </div> 
         </div>
         <div class="container">
-            <img src="./style/img/25563959_7103520.svg" alt="" width="400px" height="600px" class="img-flower">
+            <img src="./img/25563959_7103520.svg" alt="" width="400px" height="600px" class="img-flower">
         </div>
     </body>
 </html>
